# argos

./: .gitignore  Cargo.toml  README.md  action.yml  install.sh  release.sh
.github/workflows/: release.yml
Formula/: argos.rb
config/: default.toml
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/ai/: analyzer.rs  mod.rs
src/crawler/: browser.rs  extractor.rs  mod.rs  spa_detector.rs
src/http/: auth.rs  client.rs  mod.rs
src/oob/: dns_server.rs  ftp_server.rs  http_server.rs  mod.rs  payloads.rs  smtp_server.rs
src/proxy/: handler.rs  har.rs  mod.rs  traffic.rs
src/report/: csv.rs  html.rs  json.rs  jsonl.rs  mod.rs  sarif.rs
src/scanner/: api.rs  cookies.rs  cors.rs  discovery.rs  graphql.rs  headers.rs  info_disclosure.rs  mod.rs  oob_scanner.rs  secrets.rs  ssl.rs  waf.rs  websocket.rs
templates/: report.html
templates/cloud/: aws-cognito-exposed.yaml  aws-credentials-exposed.yaml  aws-metadata-credentials.yaml  aws-metadata-ssrf.yaml  aws-metadata-v1.yaml  aws-s3-bucket-listing.yaml  aws-s3-listing.yaml  azure-app-settings-exposed.yaml  azure-blob-listing.yaml  cloud-alibaba-metadata-ssrf.yaml  cloud-alibaba-oss-listing.yaml  cloud-aws-cognito-userpool.yaml  cloud-aws-lambda-url-exposed.yaml  cloud-azure-appservice-scm.yaml  cloud-azure-blob-public-read.yaml  cloud-azure-devops-pipeline.yaml  cloud-azure-keyvault-exposed.yaml  cloud-backblaze-b2-listing.yaml  (+28 more)
tests/: dast_test.rs  headers_test.rs  http_crawler_test.rs  injection_full_test.rs  injection_test.rs  oob_test.rs  scanners_test.rs  ssl_test.rs  template_engine_test.rs  templates_test.rs
wordlists/: directories.txt  subdomains.txt
(+5141 files in other folders)
