[package]
name = "argos"
version = "0.1.1"
edition = "2021"
authors = ["Raphael Vielma <rvielma@falp.org>"]
description = "Argos Panoptes - Web Security Scanner for Healthcare Environments"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "native-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tera = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde", "clock"] }
url = "2"
regex = "1"
native-tls = "0.2"
tokio-native-tls = "0.3"
futures = "0.3"
async-trait = "0.1"
scraper = "0.22"
uuid = { version = "1", features = ["v4"] }
tabled = "0.17"
base64 = "0.22"
serde_yaml = "0.9"
include_dir = "0.7"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
chromiumoxide = { version = "0.7", optional = true, default-features = false, features = ["tokio-runtime"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
x509-parser = "0.16"
hmac = "0.12"
sha2 = "0.10"

[features]
default = []
browser = ["chromiumoxide"]

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
